
  [Support for testing classes using reflection will be provided by a
  JUnit plugin which will come in 2.2].

  The "initial sleep time" has been removed, a "begin cycle sleep
  time" has been added in its place. Individual method sleep times can
  now be specified. All sleep times are now randomly varied according
  to a Normal distribution. See README for details.

  The HttpPluginSnifferFilter has been updated to record sleep times
  and reflect the property format changes.

  The logging of the HTTP plugin has been improved.

  The output and error log format is now more useful. There was no
  point in displaying the host and process for each line (each process
  gets its own output file). I've added the current cycle and test
  number instead.

  I've removed the "simple" and "ejb" plugins as they are not useful
  in their own right and I got fed up of maintaining them. Both would
  be best addressed using the planned JUnit plugin. Examples will come
  with Grinder 2.2.

  We have our first JUnit test case. We need more.

  The TCPSniffer is now silent about SocketExceptions.

  Renamed "GrinderContext" to more correct "PluginContext". Renamed
  "method" to "test" throughout.


Grinder 2.0
-----------

  "Huh - what happened to the version numbers?": This release of the
  Grinder should be published on http://developer.bea.com/ and its
  logically a "1.0" release. However, Paco's original was released as
  1.6 and I don't want to confuse the public too much as to the latest
  and greatest.


  New TCPSniffer - the SnifferServlets are dead! (Big thanks to Phil
  Dawes for the sweat behind this).


  The HTTP plugin now automatically follows redirects only if you
  set the property

	grinder.plugin.parameter.followRedirects=true

  See the README file for details.


  The build auto-detects what modules to build by checking your
  classpath for classes the module depends on. You may have to unset
  your classpath if this doesn't do what you want. Currently the